# LK-cellpose

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: convnextv2_base.yaml  fastvit_sa36.yaml  unireplknet_s.yaml
lkcellpose/: __init__.py  cli.py  dynamics.py
lkcellpose/cfg/: __init__.py  default.yaml
lkcellpose/data/: augment.py  pannuke.py  transforms.py
lkcellpose/engine/: model.py  predictor.py  results.py  trainer.py  validator.py
lkcellpose/models/panoptic/: __init__.py  predict.py  train.py  val.py
lkcellpose/nn/: __init__.py  heads.py  neck.py  tasks.py
lkcellpose/nn/backbones/: __init__.py  cellpose_unet.py  convnext.py  fastvit.py  unireplknet.py
lkcellpose/nn/modules/: conv.py
lkcellpose/utils/: __init__.py  loss.py  metrics.py  model_info.py  torch_utils.py
lkcellpose/utils/callbacks/: __init__.py  base.py  tensorboard.py
