[project]
name = "lkcellpose"
version = "0.1.0"
description = "Large-kernel ConvNet backbones for Cellpose panoptic nuclei segmentation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "timm>=1.0.27",
    "numpy",
    "pillow",
    "pyyaml",
    "tqdm",
    "tensorboard",
    "datasets",
    "cellpose>=3.1",
    "opencv-python-headless",
    "scipy",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lkcellpose*"]

[project.scripts]
lkcellpose = "lkcellpose.cli:main"
